kube/ingress/ingress.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homodigitus-ingress-service
  labels:
    app: homodigitus-ingress-nginx
spec:
  type: NodePort
  selector:
    app: homodigitus-ingress-nginx
  ports:
  - port: 8080
