kube/ingress/default.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: homodigitus-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  backend:
    serviceName: homodigitus-ingress-service
    servicePort: 8080
